# rlrml

./: .flake8  .gitignore  download_2v2_at_all_ranks.sh  flake.nix  pyproject.toml  saved_tensor.pt
frontend/: package.json
frontend/src/: App.jsx  GameDetailPage.jsx  GameInfoTable.jsx  LossAnalysisPage.jsx  LossChart.jsx  NavBar.jsx  PlayerDetailPage.jsx  TrainingSessionPage.jsx  Util.jsx  WebSocketContext.jsx  WebSocketControls.jsx
rlrml/: _http_graph_server.py  _replay_meta.py  assess.py  console.py  load.py  loss.py  manifest.py  metadata.py  mmr.py  player_cache.py  playlist.py  plot.py  replay_attributes_db.py  score.py  tracker_network.py  util.py  vpn.py  websocket.py
rlrml/download/: __init__.py  console.py  filters.py  parallel_downloader.py  replay_downloader.py  sync.py
rlrml/model/: __init__.py  build.py  cnn.py  convolution.py  display.py  load.py  train.py
rlrml/network/: proxy.py
rocket_league_mmr_prediction/: _http_graph_server.py  _replay_meta.py  assess.py  cache.py  column_headers.py  console.py  filter.py  filters.py  game_meta_cache.py  load.py  manifest.py  migration.py  mmr.py  player_cache.py  player_mmr_cache.py  playlist.py  plot.py  prepare.py  tracker_network.py  util.py  vpn.py
rocket_league_mmr_prediction/download/: __init__.py  console.py  parallel_downloader.py  progress.py  replay_downloader.py  replay_fetcher.py
tests/: test_loss.py
training-frontend/: package-lock.json  package.json
training-frontend/src/: App.js  App.jsx  GameDetailPage.jsx  GameInfoTable.jsx  LossChart.jsx  NavBar.jsx  PlayerDetailPage.jsx  TrainingSessionPage.jsx  WebSocketContext.jsx  WebSocketControls.jsx
