[tool.poetry]
name = "rlrml"
version = "0.1.0"
description = ""
authors = ["Ivan Malison <IvanMalison@gmail.com>"]
packages = [{include = "rlrml"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
torch = "^2.0.0"
numpy = "^1.24.2"
boxcars-py = { git = "https://github.com/CUBTeamRocket/boxcars-py" }
aiofiles = "^23.1.0"
plyvel = "^1.5.0"
backoff = "^2.2.1"
aiocurl = "^0.0.3.post1"
coloredlogs = "^15.0.1"
sdbus-networkmanager = "^1.1.0"
aiohttp = "^3.8.4"
tqdm = "^4.65.0"
matplotlib = "^3.7.1"
tk = "^0.1.0"
cloudscraper = "^1.2.69"
flask = "^2.2.3"
xdg-base-dirs = "^6.0.0"
rich = "^13.3.4"
requests = {extras = ["socks"], version = "^2.28.2"}
scipy = "^1.10.1"
lmdb = "^1.4.1"
websockets = "^11.0.3"

[tool.poetry.group.dev.dependencies]
python-lsp-server = {extras = ["all"], version = "^1.7.1"}
ipdb = "^0.13.13"
pytest = "*"

[tool.poetry.scripts]
load_game_dataset = 'rlrml.console:load_game_dataset'
host_plots = 'rlrml.console:host_plots'
rlbc_download = 'rlrml.download.console:run'
get_player = 'rlrml.console:get_player'
score_game = 'rlrml.console:score_game'
proxy = 'rlrml.console:proxy'
ballchasing_lookup = 'rlrml.console:ballchasing_lookup'
create_symlink_directory = 'rlrml.console:create_symlink_replay_directory'
train_model = 'rlrml.console:train_model'
apply_model = 'rlrml.console:apply_model'
calculate_loss = 'rlrml.console:calculate_loss'
manual_override = 'rlrml.console:manual_override'
delete_if_less_than = 'rlrml.console:delete_if_less_than'
socks_proxy_get = 'rlrml.console:socks_proxy_get'
lmdb_migrate = 'rlrml.console:lmdb_migrate'
websocket_host = 'rlrml.console:websocket_host'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
